--- a/index.html
+++ b/index.html
@@ -9,16 +9,56 @@
     <link rel="bookmark" href="./Pic/cat.png" type="image/x-icon">
     <title>日期計算器</title>
     <link rel="stylesheet" type="text/css" href="./Css/CssIndex.css">
+    <!-- font awesome cdn (圖片引用)-->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <!-- Bootstrap 4.6 css-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">     -->
 </head>
 <body>
-    <form   method="GET" action="">
-        <!-- <input type="text" id="input1" name="input1"> -->
-        <label>日期</label>
-        <input type="date" name="date" id="date" value="">
-        <input type="button" value="確認" onclick="getSubtractDay()">
-        <br>
-        <label id="lb_date"></label>
-    </form>
+    <nav id="Nav_navbar" class="navbar navbar-expand-lg bg-secondary navbar-dark">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" href="./index.html"><i class="fas fa-home"></i> 首頁</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link active dropdown-toggle" href="" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<i class="fas fa-chess"></i> 功能項目
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" onclick="displaydiv1();">日期計算器</a>
+                            <a class="dropdown-item" onclick="displaydiv2();">Div測試</a>
+                        </div>
+                    </li>
+					<a class="nav-link active" ><i class="fas fa-palette"></i> 遊戲</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <div class="container" id="dateCalculator">
+        <div class="jumbotron p-4">
+            <label>日期計算器</label>
+            <input type="date" name="date" id="date" value="">
+            <input type="button" value="確認" onclick="getSubtractDay()">
+            <br>
+            <label id="lb_date"></label>
+        </div>
+    </div>
+    <div class="container" id="colorDiv">
+            <button onclick="blue();">Blue</button>
+            <button onclick="red();">Red</button>
+            <button onclick="green();">Green</button>
+            <button onclick="randomcolor();">random</button>
+            <button onclick="navbarClose();">開關navbar</button>
+    </div>
+    
+    
 </body>
+<script src="https://code.jquery.com/jquery-3.6.0.js"integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script> -->
 <script src="./Js/appJs.js"></script>
 </html>
