ver 1.3.1 create menu

--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@
             </div>
         </div>
     </nav>
+    <div class="container" id="menu">
+        <div class="jumbotron p-4">
+            <h1>這裡就是首頁</h1>
+            <label id="lb_menu">請點功能項目選擇功能</label>
+            <hr>
+            <p>
+                1.目前沒啥屁用
+                <br>
+                2.
+            </p>
+        </div>
+    </div>
     <div class="container" id="dateCalculator" style="display: none;">
         <div class="jumbotron p-4">
             <label>日期計算器</label>
