--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <nav id="Nav_navbar" class="navbar navbar-expand-lg bg-secondary navbar-dark">
-        <div class="container">
+        <div class="container" id="nav_div">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -32,16 +32,17 @@
 							<i class="fas fa-chess"></i> 功能項目
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" onclick="displaydiv1();">日期計算器</a>
-                            <a class="dropdown-item" onclick="displaydiv2();">Div測試</a>
+                            <a class="dropdown-item" onclick="showDiv(0);">日期計算器</a>
+                            <a class="dropdown-item" onclick="showDiv(1);;">Div測試</a>
                         </div>
                     </li>
 					<a class="nav-link active" onclick="randomgame();"><i class="fas fa-palette"></i> 遊戲</a>
-                    <a class="nav-link active" onclick="showPic();"><i class="fas fa-photo-video"></i> 相簿測試</a>
+                    <a class="nav-link active" onclick="showDiv(2);"><i class="fas fa-photo-video"></i> 相簿測試</a>
                 </div>
             </div>
         </div>
     </nav>
+
     <div class="container" id="menu">
         <div class="jumbotron p-4">
             <h1>這裡就是首頁</h1>
@@ -54,7 +55,7 @@
             </p>
         </div>
     </div>
-    <div class="container" id="dateCalculator" style="display: none;">
+    <div class="container divv" id="dateCalculator">
         <div class="jumbotron p-4">
             <label>日期計算器</label>
             <input type="date" name="date" id="date" value="">
@@ -63,7 +64,7 @@
             <label id="lb_date"></label>
         </div>
     </div>
-    <div class="container" id="colorDiv" style="display: none;">
+    <div class="container divv" id="colorDiv">
             <button onclick="blue();">Blue</button>
             <button onclick="red();">Red</button>
             <button onclick="green();">Green</button>
@@ -71,7 +72,7 @@
             <button onclick="navbarClose();">開關navbar</button>
     </div>
     
-    <div class="container" id="picDiv" style="display: none;">
+    <div class="container divv" id="picDiv">
         <p>相簿</p>
         <hr>
         <a href="./Pic/1.jpg">
