--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
                             <a class="dropdown-item" onclick="showDiv(1);;">Div測試</a>
                         </div>
                     </li>
-					<a class="nav-link active" onclick="randomgame();"><i class="fas fa-palette"></i> 遊戲</a>
-                    <a class="nav-link active" onclick="showDiv(2);"><i class="fas fa-photo-video"></i> 相簿測試</a>
+					<!-- <a class="nav-link active" onclick="randomgame();"><i class="fas fa-palette"></i> 遊戲</a> -->
+                    <a class="nav-link active" onclick="showDiv(2);"><i class="fas fa-palette"></i> 遊戲</a>
+                    <a class="nav-link active" onclick="showDiv(3);"><i class="fas fa-photo-video"></i> 相簿測試</a>
                 </div>
             </div>
         </div>
@@ -65,13 +66,22 @@
         </div>
     </div>
     <div class="container divv" id="colorDiv">
-            <button onclick="blue();">Blue</button>
-            <button onclick="red();">Red</button>
-            <button onclick="green();">Green</button>
-            <button onclick="randomcolor();">random</button>
-            <button onclick="navbarClose();">開關navbar</button>
+        <button onclick="changeBGColor('Blue');">Blue</button>
+        <button onclick="changeBGColor('Red');">Red</button>
+        <button onclick="changeBGColor('Green');">Green</button>
+        <button onclick="randomcolor();">random</button>
+        <button onclick="navbarClose();">開關navbar</button>
     </div>
-    
+    <div class="container divv" id="game1Div">
+        <label for="game1">終極密碼:</label>
+        <input type="text" id="game1">
+        <input type="button" value="猜" onclick="randomgameInput($('#game1').val())">
+        <br>
+        <label id="lb_game1"></label>
+        <hr>
+        <p>範圍0~100</p>
+
+    </div>
     <div class="container divv" id="picDiv">
         <p>相簿</p>
         <hr>
