--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 </head>
 <body>
-    <nav id="Nav_navbar" class="navbar navbar-expand-lg bg-secondary navbar-dark">
+    <!-- <nav id="Nav_navbar" class="navbar navbar-expand-lg bg-secondary navbar-dark">
         <div class="container" id="nav_div">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -36,33 +36,63 @@
                             <a class="dropdown-item" onclick="showDiv(1);">Div測試</a>
                         </div>
                     </li>
-					<!-- <a class="nav-link active" onclick="randomgame();"><i class="fas fa-palette"></i> 遊戲</a> -->
+					<a class="nav-link active" onclick="randomgame();"><i class="fas fa-palette"></i> 遊戲</a>
                     <a class="nav-link active" onclick="showDiv(2);"><i class="fas fa-palette"></i> 遊戲</a>
                     <a class="nav-link active" onclick="showDiv(3);"><i class="fas fa-photo-video"></i> 相簿測試</a>
                 </div>
             </div>
         </div>
-    </nav>
+    </nav> -->
+
+    <div class="pos-f-t">
+        <nav class="navbar navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent">
+            <span class="navbar-toggler-icon"></span>
+            實驗側拉
+        </button>
+        </nav>
+        <div class="bg-dark collapse position-fixed" id="navbarToggleExternalContent">
+            <div class="py-4">
+                <h4 class="text-white mx-4" id="a_home"><i class="fas fa-home"></i> 首頁</h4>
+                <h4 class="text-white mx-4"><i class="fas fa-chess"></i> 功能項目</h4>
+                <h6 class="text-white mx-4" onclick="showDiv(0);"><li class="mx-4">日期計算器</li></h6>
+                <h6 class="text-white mx-4" onclick="showDiv(1);"><li class="mx-4">Div測試</li></h6>
+                <h4 class="text-white mx-4" onclick="showDiv(2);"><i class="fas fa-palette"></i> 遊戲</h4>
+                <h4 class="text-white mx-4" onclick="showDiv(3);"><i class="fas fa-photo-video"></i> 相簿測試</a>
+                <span class="text-muted mx-4"></span>
+                </span>
+            </div>
+        </div>
+    </div>
+
+
 
     <div class="container" id="menu">
         <div class="jumbotron p-4">
             <h1>這裡就是首頁</h1>
             <label id="lb_menu">請點功能項目選擇功能</label>
             <hr>
-            <p>
-                1.待新增
-                <br>
-                2.
+            <p id="p1">
+                
+            </p>
+            <p id="p2">
+
+            </p>
+            <p id="p3">
+
             </p>
         </div>
     </div>
     <div class="container divv" id="dateCalculator">
         <div class="jumbotron p-4">
             <label>日期計算器</label>
-            <input type="date" name="date" id="date" value="" onchange="getSubtractDay()">
-            <input type="button" value="確認" onclick="getSubtractDay()">
+            <input type="date" name="date" id="date" value="">
+            <input type="button" id="bt_date" value="清除" >
             <br>
             <label id="lb_date"></label>
+            <ul id="ul_dateinfo">
+
+            </ul>
         </div>
     </div>
     <div class="container divv" id="colorDiv">
@@ -74,7 +104,7 @@
     </div>
     <div class="container divv" id="game1Div">
         <label for="game1">終極密碼:</label>
-        <input type="text" id="game1">
+        <input type="number" id="game1" min="0" max="100">
         <input type="button" value="猜" onclick="randomgameInput($('#game1').val())">
         <br>
         <label id="lb_game1"></label>
@@ -92,12 +122,10 @@
             <img src="./Pic/2.jpg" alt="2" width="20%">
         </a>
     </div>
-    
+    <script src="https://code.jquery.com/jquery-3.6.0.js"integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script> -->
+    <script src="./Js/appJs.js"></script>
 </body>
-<script src="https://code.jquery.com/jquery-3.6.0.js"integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
-<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script> -->
 
-
-<script src="./Js/appJs.js"></script>
 </html>
