ver 1.4.2 bug fix 側欄自收

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <!-- font awesome cdn (圖片引用)-->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <!-- Bootstrap 4.6 css-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="./Css/bootstrap.css">
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">     -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
@@ -48,7 +49,7 @@
         <nav class="navbar navbar-dark bg-dark">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent">
             <span class="navbar-toggler-icon"></span>
-            實驗側拉
+            功能
         </button>
         </nav>
         <div class="bg-dark collapse position-fixed" id="navbarToggleExternalContent">
@@ -60,7 +61,6 @@
                 <h4 class="text-white mx-4" onclick="showDiv(2);"><i class="fas fa-palette"></i> 遊戲</h4>
                 <h4 class="text-white mx-4" onclick="showDiv(3);"><i class="fas fa-photo-video"></i> 相簿測試</a>
                 <span class="text-muted mx-4"></span>
-                </span>
             </div>
         </div>
     </div>
@@ -76,10 +76,8 @@
                 
             </p>
             <p id="p2">
-
             </p>
             <p id="p3">
-
             </p>
         </div>
     </div>
