--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
     <!-- Bootstrap 4.6 css-->
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="./Css/bootstrap.css">
+    <!-- Lightbox -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" />
+
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">     -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script>
 
+    </script>
 
 </head>
 <body id="bd">
+    <!-- 直式nav -->
     <!-- <nav id="Nav_navbar" class="navbar navbar-expand-lg bg-secondary navbar-dark">
         <div class="container" id="nav_div">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +52,7 @@
     </nav> -->
 
     <div class="pos-f-t">
-        <nav class="navbar navbar-dark bg-dark">
+        <nav class="navbar navbar-dark bg-dark" id="Nav_navbar" >
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent">
             <span class="navbar-toggler-icon"></span>
             功能
@@ -72,13 +78,11 @@
             <h1>這裡就是首頁</h1>
             <label id="lb_menu">請點功能項目選擇功能</label>
             <hr>
-            <p id="p1">
-                
-            </p>
-            <p id="p2">
-            </p>
-            <p id="p3">
-            </p>
+            <p id="p1"></p>
+            <p id="p2"></p>
+            <p id="p3"></p>
+            <p id="p4"></p>
+            <p id="p5"></p>
         </div>
     </div>
     <div class="container divv" id="dateCalculator">
@@ -98,6 +102,8 @@
         <button onclick="changeBGColor('Red');">Red</button>
         <button onclick="changeBGColor('Green');">Green</button>
         <button onclick="randomcolor();">random</button>
+        <button onclick="randomcolor1()" id="randomcolor1">連續隨機</button>
+        <button onclick="color1()" id="color1">連續</button>
         <button onclick="navbarClose();">開關navbar</button>
     </div>
     <div class="container divv" id="game1Div">
@@ -113,16 +119,24 @@
     <div class="container divv" id="picDiv">
         <p>相簿</p>
         <hr>
-        <a href="./Pic/1.jpg">
+        <!-- <a href="./Pic/1.jpg">
             <img src="./Pic/1.jpg" alt="1" width="20%">
+        </a> -->
+        <a href="./Pic/1.jpg" data-toggle="lightbox" data-gallery="img-gallery" data-height="560" data-width="560">
+            <img src="./Pic/1.jpg" alt="" class="img-fluid" width="20%">
         </a>
-        <a href="./Pic/2.jpg">
-            <img src="./Pic/2.jpg" alt="2" width="20%">
+        <a href="./Pic/2.jpg" data-toggle="lightbox" data-gallery="img-gallery" data-height="560" data-width="560">
+            <img src="./Pic/2.jpg" alt="" class="img-fluid" width="20%">
         </a>
+        
     </div>
+
+
+    <!-- body內script -->
     <script src="https://code.jquery.com/jquery-3.6.0.js"integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
     <script src="./Js/appJs.js"></script>
 </body>
 </html>
