--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <h4 class="text-white mx-4" id="a_home"><i class="fas fa-home"></i> 首頁</h4>
                 <h4 class="text-white mx-4"><i class="fas fa-chess"></i> 功能項目</h4>
                 <h6 class="text-white mx-4" onclick="showDiv(0);"><li class="mx-4">日期計算器</li></h6>
-                <h6 class="text-white mx-4" onclick="showDiv(1);"><li class="mx-4">Div測試</li></h6>
+                <h6 class="text-white mx-4" onclick="showDiv(1);"><li class="mx-4">顏色測試</li></h6>
                 <h4 class="text-white mx-4" onclick="showDiv(2);"><i class="fas fa-palette"></i> 遊戲</h4>
                 <h4 class="text-white mx-4" onclick="showDiv(3);"><i class="fas fa-photo-video"></i> 相簿測試</a>
                 <span class="text-muted mx-4"></span>
