--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 <h6 class="text-white mx-4" onclick="showDiv(1);"><li class="mx-4">顏色測試</li></h6>
                 <h4 class="text-white mx-4" onclick="showDiv(2);"><i class="fas fa-palette"></i> 遊戲</h4>
                 <h4 class="text-white mx-4" onclick="showDiv(3);"><i class="fas fa-photo-video"></i> 相簿測試</a>
+                <h4 class="text-white mx-4" onclick="showDiv(4);"><i class="fas fa-mouse-pointer"></i> 滑鼠測試</a>
                 <span class="text-muted mx-4"></span>
             </div>
         </div>
@@ -130,7 +131,9 @@
         </a>
         
     </div>
-
+    <div class="container divv" id="mouseDiv">
+        <p>滑鼠</p>
+    </div>
 
     <!-- body內script -->
     <script src="https://code.jquery.com/jquery-3.6.0.js"integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="crossorigin="anonymous"></script>
