--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 <h4 class="text-white mx-4" onclick="showDiv(2);"><i class="fas fa-palette"></i> 遊戲</h4>
                 <h4 class="text-white mx-4" onclick="showDiv(3);"><i class="fas fa-photo-video"></i> 相簿測試</a>
                 <h4 class="text-white mx-4" onclick="showDiv(4);"><i class="fas fa-mouse-pointer"></i> 滑鼠測試</a>
+                <h4 class="text-white mx-4" onclick="showDiv(5);"><i class="fas fa-mouse-pointer"></i> 測試</a>
                 <span class="text-muted mx-4"></span>
             </div>
         </div>
@@ -138,6 +139,26 @@
         <p>滑鼠</p>
         <canvas id="canvas"></canvas>
     </div>
+    <div class="container divv" id="testDiv">
+        <div class="content" id="LoginBlock">
+            <div class="Login">
+                <span>請先輸入Google帳號</span>
+                <input type="text" id="Login" />
+            </div>
+            <div class="Login_button">
+                <button class="btn btn-primary" id="Login_button" onclick="login()">
+                觀看GoogleCalendar</button>
+            </div>
+        </div>
+        
+        <div class="Logout_button" id="Logout_button" style="display: none;">
+            <button class="btn btn-primary" id="Login_button" onclick="logout()">登出</button>
+        </div>
+        
+        <div class="content" id="showBlock" style="display: none;">
+            <iframe id="mainiframe"  style="border: 0" width="800" height="600" frameborder="0"  scrolling="no"></iframe>
+        </div>
+    </div>
 
     <!-- body內script -->
     <script src="https://code.jquery.com/jquery-3.6.0.js"integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="crossorigin="anonymous"></script>
@@ -145,5 +166,11 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
     <script src="./Js/appJs.js"></script>
+
+    <script src="./Js/googleapi.js"></script>
+    <script async defer src="https://apis.google.com/js/api.js"
+        onload="this.onload=function(){};handleClientLoad()"
+        onreadystatechange="if (this.readyState === 'complete') this.onload()">
+    </script>
 </body>
 </html>
