--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <h6 class="text-white mx-4" onclick="showDiv(1);"><li class="mx-4">顏色測試</li></h6>
                 <h4 class="text-white mx-4" onclick="showDiv(2);"><i class="fas fa-palette"></i> 遊戲</h4>
                 <h4 class="text-white mx-4" onclick="showDiv(3);"><i class="fas fa-photo-video"></i> 相簿測試</a>
-                <h4 class="text-white mx-4" onclick="showDiv(4);"><i class="fas fa-mouse-pointer"></i> 滑鼠測試</a>
+                <h4 class="text-white mx-4" onclick="showDiv(4);"><i class="fas fa-mouse-pointer"></i> 圖表測試</a>
                 <h4 class="text-white mx-4" onclick="showDiv(5);"><i class="fas fa-mouse-pointer"></i> 測試</a>
                 <span class="text-muted mx-4"></span>
             </div>
@@ -136,7 +136,7 @@
         
     </div>
     <div class="container divv" id="mouseDiv">
-        <p>滑鼠</p>
+        <p>圖表測試</p>
         <canvas id="canvas"></canvas>
     </div>
     <div class="container divv" id="testDiv">
