--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
             <button class="btn btn-primary" id="Login_button" onclick="logout()">登出</button>
         </div>
         
-        <div class="content" id="showBlock" style="display: none;">
-            <iframe id="mainiframe"  style="border: 0" width="800" height="600" frameborder="0"  scrolling="no"></iframe>
+        <div class="container divv" id="showBlock" style="display: none;">
+            <iframe class="container googleIframe" id="mainiframe"  style="border: 0" frameborder="0"  scrolling="no"></iframe>
         </div>
     </div>
 
